Brands section items align fixed

--- a/assets/src/components/main/brands/_brands.scss
+++ b/assets/src/components/main/brands/_brands.scss
@@ -1,78 +1,93 @@
 // X-Small devices (portrait phones, less than 576px)
 .brands {
-    padding-top: 50px;
-    padding-bottom: 40px;
+  padding-top: 50px;
+  padding-bottom: 40px;
 
-    &__heading {
-        text-align: center;
-        font-size: 26px;
-        font-style: normal;
-        line-height: normal;
-        text-transform: uppercase;
-        margin-bottom: 24px;
-    }
-    &__items {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-        
-        flex-wrap: wrap;
-    }
-    &__item {
-        width: 45%;
-        padding: 0 30px;
+  &__heading {
+    text-align: center;
+    font-size: 26px;
+    font-style: normal;
+    line-height: normal;
+    text-transform: uppercase;
+    margin-bottom: 24px;
+  }
+  &__items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: -20px;
+  }
+  &__item {
+    flex: 1 1 22%;
+    margin: 20px;
 
-        img {
-            width: 100%;
-        }
+    img {
+      width: 100%;
     }
+  }
 }
 
 // /* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {
-    .brands {
-        &__items {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            
-            flex-wrap: wrap;
-        }
-        &__item {
-            width: 28%;
-        }
-    }
-}
+// @media (min-width: 576px) {
+//     .brands {
+//         &__items {
+//             display: flex;
+//             justify-content: center;
+//             align-items: center;
+
+//             flex-wrap: wrap;
+//         }
+//         &__item {
+//             width: 28%;
+//         }
+//     }
+// }
 
 /* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
-    .brands {
-        &__item {
-            width: 15%;
-        }
-        &__heading {
-            font-size: 50px;
-        }
-    }
-}
+// @media (min-width: 768px) {
+//     .brands {
+//         &__item {
+//             width: 15%;
+//         }
+//         &__heading {
+//             font-size: 50px;
+//         }
+//     }
+// }
 
 // /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
   .brands {
     padding-bottom: 70px;
+
+    &__items {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      margin: 0 -40px -25px;
+    }
+    &__item {
+      flex: 1 1 10%;
+      margin: 0 40px 25px;
+
+      img {
+        width: 100%;
+      }
+    }
   }
 }
 
 /* XX-Large devices (larger desktops, 1400px and up) */
 @media (min-width: 1400px) {
-    .brands {
-        padding-top: 80px;
-        
-        &__heading {
-            padding-left: 150px;
-            padding-right: 150px;
-        }
+  .brands {
+    padding-top: 80px;
 
+    &__heading {
+      font-size: 50px;
+      padding-left: 150px;
+      padding-right: 150px;
     }
+  }
 }
