--- a/assets/src/style/_common.scss
+++ b/assets/src/style/_common.scss
@@ -73,7 +73,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 .no-scroll {
